--- a/style.css
+++ b/style.css
@@ -1,36 +1,45 @@
-section{
-   
-    display:flex;
-    flex-direction: column;
-    gap:10px;
+section {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
 
-.btn{
-    background-color: aquamarine;
-    border-color:black;
-    font-size: 20px;
-    cursor: pointer;
-    width: 120px;
-    border-radius: 10px;
+.btn {
+  background-color: aquamarine;
+  border-color: black;
+  font-size: 20px;
+  cursor: pointer;
+  width: 120px;
+  border-radius: 10px;
 }
 
-.mlz{
-    cursor:pointer;
+.mlz {
+  cursor: pointer;
 }
 
-#rkpln{
-    position: absolute;
-    top:0;
-    left:0;
-    opacity: 0.4;
-    z-index: -10;
-    width: 100vw;
+#rkpln {
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0.4;
+  z-index: -10;
+  width: 100vw;
 }
-h1{
-    height: 80px;
-    display:flex;
-    align-items: center;
-    font-family: 'Trebuchet MS', sans-serif;
-    text-shadow:3px 3px 3px rgb(109, 106, 106);
+h1 {
+  height: 80px;
+  display: flex;
+  align-items: center;
+  font-family: "Trebuchet MS", sans-serif;
+  text-shadow: 3px 3px 3px rgba(53, 51, 51, 0.556);
 }
 
+.display {
+  background-color: rgb(174, 84, 154);
+  font-size: 20px;
+  width: 100%;
+  height: 4rem;
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
